# Smart-Workspace

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
ScheduX/: asgi.py  settings.py  urls.py  views.py  wsgi.py
accounts/: models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_userprofile_ai_api_key.py  0003_userprofile_ai_model.py
ai_engine/: base.py  email_generator.py  meeting_notes.py  promptDeterminer.py  summarizer.py  task_parser.py
assistant/: urls.py  views.py
dashboard/: urls.py  views.py
planner/: urls.py  views.py
project_2/: settings.py  urls.py  views.py
smart_workspace/: settings.py  urls.py
static/css/: style.css
static/js/: calendar.js  chart.js  email.js  sideBar.js  summaries.js  task.js
templates/: activity.html  base.html  base_app.html  calendar.html  chat.html  dashboard.html  email.html  login.html  planner.html  profile.html  signup.html  summaries.html  tasks.html
templates/account/: logout.html  signup.html
templates/components/: sidebar.html
templates/socialaccount/: login.html
